--- a/style.css
+++ b/style.css
@@ -354,11 +354,11 @@ textarea {
 }
 
 #thumbs-up {
-  background: url("/img/spritesheet1.png") 0px 0px;
+  background: url("img/spritesheet1.png") 0px 0px;
 }
 
 #thumbs-down {
-  background: url("/img/spritesheet1.png") 52px 0px;
+  background: url("img/spritesheet1.png") 52px 0px;
 }
 
 /* Bottom Container */
