--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,15 +1,13 @@
-.skills, .bottom-container {
+%section-style {
   padding: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 * {
   margin: 0;
   padding: 0;
   outline: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -54,7 +52,7 @@ hr {
   height: 4%;
   margin: 0px auto;
   border: none;
-  border-bottom: 5px #afaeae dotted;
+  border-bottom: 5px rgb(175, 174, 174) dotted;
 }
 
 /* Navbar */
@@ -62,16 +60,10 @@ hr {
   position: fixed;
   top: 0;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 8px;
 }
@@ -83,15 +75,9 @@ hr {
 }
 
 .navbar-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   height: 100%;
 }
 
@@ -101,12 +87,11 @@ hr {
   color: white;
   font-weight: bold;
   padding: 18px 40px;
-  -webkit-transition: 0.3s all;
   transition: 0.3s all;
 }
 
 .navbar-links a:hover {
-  background: #cacaca;
+  background: rgb(202, 202, 202);
   color: black;
   border-radius: 6px;
 }
@@ -116,26 +101,17 @@ hr {
   right: 10px;
   top: 10px;
   display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   border-radius: 6px;
   width: 40px;
   height: 40px;
   padding: 2px 8px;
   cursor: pointer;
-}
-
-.toggle:hover {
-  -webkit-box-shadow: 0px 0px 4px 0px white;
-          box-shadow: 0px 0px 4px 0px white;
+  &:hover {
+    box-shadow: 0px 0px 4px 0px white;
+  }
 }
 
 .bar {
@@ -147,19 +123,10 @@ hr {
 /* Top Container */
 .top-container {
   background: url("../img/bg4.jpg") no-repeat top center/cover;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
 
@@ -173,30 +140,19 @@ hr {
 }
 
 .extra {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
   background-color: #e3fdfd;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .profile {
   width: 50%;
   line-height: 2;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .profile img {
@@ -221,19 +177,11 @@ caption {
 .skills {
   height: 100vh;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  @extend %section-style;
 }
 
 .skill-row {
@@ -258,39 +206,23 @@ caption {
 /* Second-last Container */
 .form-container {
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background-color: #e3fdfd;
 }
 
 .form-inner {
-  background-image: -webkit-gradient(linear, left top, right top, from(#ffc947), to(orangered));
   background-image: linear-gradient(to right, #ffc947, orangered);
   max-width: 400px;
   width: 100%;
   height: 440px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   padding: 20px;
   border-radius: 8px;
-  -webkit-box-shadow: 4px 4px 10px 0px;
-          box-shadow: 4px 4px 10px 0px;
+  box-shadow: 4px 4px 10px 0px;
 }
 
 .fa {
@@ -344,12 +276,8 @@ textarea {
   margin: 50px auto;
   padding: 0px;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 #sprite li {
@@ -367,13 +295,11 @@ textarea {
 }
 
 #sprite li:hover {
-  -webkit-transform: translateY(-4px);
-          transform: translateY(-4px);
+  transform: translateY(-4px);
 }
 
 #sprite li:active {
-  -webkit-transform: translateY(0px);
-          transform: translateY(0px);
+  transform: translateY(0px);
 }
 
 #thumbs-up {
@@ -390,6 +316,7 @@ textarea {
   text-align: center;
   background: #000;
   color: white;
+  @extend %section-style;
   height: auto;
 }
 
@@ -402,7 +329,6 @@ textarea {
   font-weight: bold;
   margin-right: 1.8rem;
 }
-
 .bottom-container .footer-link:hover {
   font-size: 1.2rem;
   text-shadow: 2px 2px 20px white;
@@ -412,12 +338,8 @@ textarea {
 #contact_me .bottom-ul {
   overflow: auto;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin: auto;
 }
 
@@ -432,90 +354,95 @@ textarea {
 
 .bottom-i {
   color: white;
-  -webkit-transition: 0.25s all;
   transition: 0.25s all;
 }
 
 .bottom-i:hover {
   color: #08a0e9;
-  -webkit-transform: translate(0px, -10px);
-          transform: translate(0px, -10px);
+  transform: translate(0px, -10px);
 }
 
+// Setting styles for small devices
 @media screen and (max-width: 580px) {
   .navbar-links {
     display: none;
     margin: auto;
   }
+
   .navbar-links a {
     width: 100%;
     padding: 10px;
     text-align: center;
   }
+
   .navbar {
     padding: 0px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
+
   .navbar-links.show {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
+
   .toggle {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
+
   .profile {
     width: 98%;
     line-height: normal;
   }
+
   table {
     font-size: 14px;
     margin: 10px auto 0px;
     border-collapse: collapse;
   }
+
   td {
     padding: 4px;
   }
+
   .extra p {
     text-align: justify;
   }
+
   .skills {
     padding: 0px;
   }
+
   .skills .skill-row {
     width: 90%;
     line-height: normal;
   }
+
   .form-inner {
     margin: 0px;
     width: 80%;
     height: auto;
     padding: 5px;
   }
+
   form {
     padding: 0px 10px 10px;
   }
+
   form > div {
     margin: 0px;
   }
+
   input,
   textarea,
   .form-btn {
     border-radius: 8px;
   }
+
   #sprite {
     margin: 25px auto;
   }
+
   #contact_me .bottom-li {
     margin: 1.1rem;
   }
@@ -526,12 +453,13 @@ textarea {
   .profile {
     width: 90%;
   }
+
   .skill-row {
     width: 80%;
     text-align: justify;
   }
+
   #thumbs-up {
     margin-right: 10%;
   }
 }
-/*# sourceMappingURL=style.css.map */
